--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -280,7 +280,7 @@
                             <div class="col-xs-12 col-md-12">
                                   <div class="form-group" ng-class="{ 'has-error' : (locationForm.addressSearchText.$invalid ) && newLocationSubmitted }">
                                     <label class="control-label">Address</label>
-                                    <input type="text" autocomplete="off" name="addressText" typeahead="result.formatted_address for result in locationResults" class="form-control" ng-model="addressSearchText" placeholder="Search for an Address" required>
+                                    <input type="text" autocomplete="off" name="addressText" typeahead="result.formatted_address for result in getLocation($viewValue)" typeahead-on-select="makeSelection($item)" class="form-control" ng-model="addressSearchText" placeholder="Search for an Address" required>
                                   </div>
                             </div>                                                                                               
                         </div>                                            
