--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -235,7 +235,7 @@
                         <div class="row">
                             <div class="col-xs-6 col-md-6">
                                 <div class="form-group">
-                                    <label for="item-name">Location Type</label><br />
+                                    <label class="control-label">Location Type</label><br />
                                     <label class="radio-inline">
                                       <input type="radio" ng-model="locationType" name="locationTypeOptions" id="farmRadio" value="true"><p>One Time</p>
                                     </label>
@@ -246,7 +246,7 @@
                             </div>                        
                             <div class="col-xs-6 col-md-6">
                                 <div class="form-group" ng-class="{ 'has-error' : newLocationSubmitted && locationForm.locationField.$invalid }">
-                                    <label for="item-name">Location Name</label>
+                                    <label class="control-label">Location Name</label>
                                     <input required ng-model="locationName" type="text" name="locationField" class="form-control" id="item-name" placeholder="Location Name"/>
                                 </div>
                             </div>
@@ -278,7 +278,7 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-12 col-md-12">
-                                  <div class="form-group" ng-class="{ 'has-error' : (locationForm.addressSearchText.$invalid ) && newLocationSubmitted }">
+                                  <div class="form-group" ng-class="{ 'has-error' : (locationForm.addressText.$invalid ) && newLocationSubmitted }">
                                     <label class="control-label">Address</label>
                                     <input type="text" autocomplete="off" name="addressText" typeahead="result.formatted_address for result in getLocation($viewValue)" typeahead-on-select="makeSelection($item)" class="form-control" ng-model="addressSearchText" placeholder="Search for an Address" required>
                                   </div>
@@ -287,13 +287,13 @@
                         <div class="row">
                             <div class="col-xs-6 col-md-6" ng-class="{'has-error': newLocationSubmitted && locationForm.phoneField.$invalid}">
                                 <div class="form-group">
-                                    <label for="item-name">Phone Number</label>
+                                    <label class="control-label">Phone Number</label>
                                     <input required ng-model="phoneAtLocation" type="text" class="form-control" id="item-name" name="phoneField" placeholder="Phone Number"/>
                                 </div>
                             </div>
                             <div class="col-xs-6 col-md-6">
                                 <div class="form-group" ng-class="{'has-error': newLocationSubmitted && locationForm.emailField.$invalid}">
-                                    <label for="item-name">Email</label>
+                                    <label class="control-label">Email</label>
                                     <input required type="text" ng-model="emailAtLocation" class="form-control" id="item-name" name="emailField" placeholder="Email"/>
                                 </div>
                             </div>                                                                   
@@ -301,7 +301,7 @@
                         <div class="row">
                             <div class="col-xs-12 col-md-12">
                                 <div class="form-group no-bottom-margin" ng-class="{ 'has-error' : newLocationSubmitted && locationForm.locationDescriptionField.$invalid }">
-                                    <label for="item-name">Location Details</label>
+                                    <label class="control-label">Location Details</label>
                                     <textarea required ng-model="locationDescription" type="text" name="locationDescriptionField" class="form-control" placeholder="Location Details"/>
                                 </div>
                             </div>                        
