--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -1,5 +1,9 @@
 /* BELOCAL STYLES */
 
+.hours-picker {
+  margin-bottom: 5px;
+}
+
 .closed-string {
   margin: 0px;
   font-weight: bold;
@@ -36,6 +40,12 @@ body {
   /* Set the fixed height of the footer here */
   height: 60px;
   background-color: #f5f5f5;
+}
+
+@media (max-width: 598px) {
+  .radio-inline-responsive {
+    margin-left: 0px !important;
+  }
 }
 
 @media (max-width: 768px) {
