--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -191,7 +191,7 @@
             <!-- THIS IS THE NON-REPEATING PART -->
             <div class="row">
                 <div class="col-sm-12 seller-stock-formatting">
-                    <hr>
+                    <hr class="availability-hr">
                     <b>Current Availability:</b>
                     <span class="pull-right">
                         <input type="radio" ng-change="stockValueChanged(product)" ng-model="product.stock" name="stock{{$index}}" value="IS"> In Stock
