--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -812,7 +812,7 @@ hr{
 
 .new-vendor-avatar { 
   width: 500px;
-  height: 300px; 
+  height: 100%; 
   max-width: 100%;
   overflow: hidden; 
   vertical-align: middle;
@@ -862,7 +862,7 @@ hr{
 @media (max-width: 992px) {
   .new-vendor-avatar { 
     max-width: 500px; 
-    height: 300px; 
+    height: 100%; 
     overflow: hidden; 
     vertical-align: middle;
   }
