--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -11,11 +11,13 @@
 html {
   position: relative;
   min-height: 100%;
+  background-color: #EEEEEE;
 }
 
 body {
   /* Margin bottom by footer height */
   margin-bottom: 40px;
+  background-color: #EEEEEE;  
 }
 
 .footer {
@@ -24,7 +26,8 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
-  background-color: #f5f5f5;
+  background-color: #777777;
+  color: #EFEFEF;
 }
 
 @media (max-width: 768px) {
@@ -279,7 +282,7 @@ body {
 /* Custom page footer */
 .footer {
   padding-top: 19px;
-  color: #777;
+  background-color: #777;
   border-top: 1px solid #e5e5e5;
 }
 
