--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -1,36 +1,91 @@
 <div class="site-wrapper">
-
-  <div class="site-wrapper-inner">
-
-    <div class="cover-container">
-
-      <div class="masthead clearfix">
-        <div class="inner">
-          <h3 class="masthead-brand">Cover</h3>
-          <ul class="nav masthead-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
+    <div class="site-wrapper-inner">
+        <div class="cover-container">
+            <div class="masthead clearfix">
+                <div class="inner">
+                    <h3 class="masthead-brand">be<span class="beLocal-highlight">Local</span></h3>
+                    <ul class="nav masthead-nav" role="tablist">
+                        <li class="active"><a href="/welcome/#home" role="tab" data-toggle="tab">Home</a></li>
+                        <li><a href="/welcome/#customers" role="tab" data-toggle="tab">For Customers</a></li>
+                        <li><a href="/welcome/#vendors" role="tab" data-toggle="tab">For Farmers</a></li>
+                        <li><a>Sign In</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="tab-content">
+                <div class="tab-pane active" id="home">
+                    <div class="inner cover">
+                        <h1 class="cover-heading">Discover Victoria's Local Food Scene</h1>
+                        <p class="lead">be<span class="beLocal-highlight">Local</span> connects you with the food grown around you. To begin browsing without creating an account, click Get Started below.</p>
+                        <p class="lead">
+                            <a href="#" class="btn btn-lg btn-default">Get Started</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="tab-pane" id="customers">
+                    <div class="inner cover">
+                        <h1 class="cover-heading">For Customers</h1>
+                        <span>
+                            <p class="how-it-works">How It Works</p>
+                        </span>
+                        <div class="container">
+                            <!-- Example row of columns -->
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <h2>Search</h2>
+                                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                                </div>
+                                <div class="col-md-4">
+                                    <h2>Browse</h2>
+                                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                                </div>
+                                <div class="col-md-4">
+                                    <h2>Discover</h2>
+                                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                                </div>
+                            </div>
+                            <br><br>
+                            <p class="lead">
+                                <a href="#" class="btn btn-lg btn-default">Sign Up as a Customer</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane" id="vendors">
+                    <div class="inner cover">
+                        <h1 class="cover-heading">For Farmers and Local Foodmakers</h1>
+                        <span>
+                            <p class="how-it-works">How It Works</p>
+                        </span>
+                        <div class="container">
+                            <!-- Example row of columns -->
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <h2>Add Locations</h2>
+                                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                                </div>
+                                <div class="col-md-4">
+                                    <h2>Add Products</h2>
+                                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                                </div>
+                                <div class="col-md-4">
+                                    <h2>Connect</h2>
+                                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                                </div>
+                            </div>
+                            <br><br>
+                            <p class="lead">
+                                <a href="#" class="btn btn-lg btn-default">Sign Up as a Farmer</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="mastfoot">
+                <div class="inner">
+                    <p>&copy; 2014 beLocal</p>
+                </div>
+            </div>
         </div>
-      </div>
-
-      <div class="inner cover">
-        <h1 class="cover-heading">Cover your page.</h1>
-        <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-        <p class="lead">
-          <a href="#" class="btn btn-lg btn-default">Learn more</a>
-        </p>
-      </div>
-
-      <div class="mastfoot">
-        <div class="inner">
-          <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-        </div>
-      </div>
-
     </div>
-
-  </div>
-
 </div>
