--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -75,7 +75,7 @@
                             </div>
                             <br><br>
                             <p class="lead">
-                                <a href="#" class="btn btn-lg btn-default">Sign Up as a Farmer</a>
+                                <a href="#" class="btn btn-lg btn-default">Sign Up <a href=""></a>s a Farmer</a>
                             </p>
                         </div>
                     </div>
