--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -883,6 +883,31 @@ hr{
   padding-bottom: 5px;
 }
 
+.location-details {
+  display: inline-block;
+  padding: 0px 15px 0px 15px !important;
+  font-size: 13px;
+  font-family: 'Roboto', sans-serif;
+  color: #403e3b;
+  padding-top: 10px;
+  padding-bottom: 0px;
+
+}
+
+.card-lable-style {
+  margin-top: 5px;
+  margin-bottom:5px;
+  font-family: 'Libre Baskerville', serif;
+  font-size: 20px;
+  line-height: normal;
+  font-weight: bolder;
+  color: #403e3b;
+}
+
+.store-hours{
+  padding-left:10px;
+}
+
 @media (max-width: 992px) {
   .new-vendor-avatar { 
     max-width: 500px; 
