--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -13,7 +13,12 @@
         <div class="vendor-header-content">
 
             <span class="new-vendor-name-style">
-                {{StateService.getCurrentUser().first_name}} {{StateService.getCurrentUser().last_name}}
+                {{StateService.getCurrentUser().name}}
+            </span>
+            <span class="pull-right">
+                    <span data-toggle="tooltip" data-placement="bottom" title="Edit Profile">
+                    <span class="edit-text glyphicon glyphicon-edit" data-toggle="modal" data-target="#profileModal" ng-click="editProfile()"></span>
+                    </span>
             </span>
             <br>
             <span class="new-hr-heading-style">
@@ -60,35 +65,37 @@
             <div class="row">
 
                 <!-- Display the locations name -->
-                <div class="col-xs-9">
-                    <h4>{{location.name}}</h4> 
+                <div class="col-xs-9 card-lable-style">
+                    {{location.name}}
                 </div>
 
                 <!-- Display icons which link to corresponding modals (tooltips are outer span tag) -->
                 <div class="col-xs-3 edit-delete-buttons">
                     <span data-toggle="tooltip" data-placement="bottom" title="Edit Location">
-                        <span class="edit-text glyphicon glyphicon-edit" data-toggle="modal" data-target="#locationModal" ng-click="editLocation(location)"></span>
+                    <span class="edit-text glyphicon glyphicon-edit" data-toggle="modal" data-target="#locationModal" ng-click="editLocation(location)"></span>
                     </span>
                     <span data-toggle="tooltip" data-placement="bottom" title="Delete Location">
-                        <span class="edit-text glyphicon glyphicon-trash" ng-click="deleteLocation(location)" data-toggle="modal" data-target="TBA"></span>
+                    <span class="edit-text glyphicon glyphicon-trash" ng-click="deleteLocation(location)" data-toggle="modal" data-target="TBA"></span>
                     </span>
                 </div> 
 
             </div>
 
-            <div>
+            <div class="location-details">
                 <p ng-show="location.date"><b>DATE:</b>
                     {{location.date | date:" EEEE',' MMMM d'"}},
                     {{location.address.hours[0].from_hour}} - 
                     {{location.address.hours[0].to_hour}}
                 </p>
-                <div ng-show="location.date == null">
-                <p><b>HOURS:</b></p>
-                        <span ng-repeat="day in location.address.hours">
-                            <p>
-                                {{weekdays[day.weekday - 1]}}: {{day.from_hour}} - {{day.to_hour}}
-                            </p>
-                        </span>
+                <div ng-show="location.date == null" >
+                <p><b>HOURS:</b>
+                        <ul class="list-inline store-hours">&nbsp
+                        <li ng-repeat="day in location.address.hours">
+                            <b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}
+                        </li>
+
+                        </ul>
+                </p>
                 </div>
                 <p><b>LOCATION:</b>
                     {{location.address.addr_line1}},
@@ -179,6 +186,142 @@
 
 <!-- START OF MODALS -->
 
+<!-- Seller Profile Modal -->
+<div class="modal fade" id="profileModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4>Update Your Profile<br />
+                <small>Please Note: This information will be visable to others using this application.</small>
+                </h4>               
+            </div>
+            <div class="modal-body">  
+                <div class="container-fluid">                   
+                    <form role="form" name="profileForm" novalidate>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="form-group" ng-class="{ 'has-error' : vendorProfileUpdated && profileForm.imageField.$invalid }">
+                                    <label for="item-image">Change Profile Image</label><br />
+                                    <img src="#" id="itemPreview" />                                    
+                                    <input onchange="angular.element(this).scope().fileNameChanged(this.files)" name="imageField" type="file" id="item-image">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="form-group" ng-class="{ 'has-error' : vendorProfileUpdated && profileForm.company-name.$invalid }">
+                                    <label for="company-name">Company Name</label> 
+                                    <input required ng-model="StateService.currentUser.vendor.company_name" type="text" name="company-name" class="form-control" id="company-name" placeholder="Company Name"/>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="form-group" ng-class="{ 'has-error' : vendorProfileUpdated && profileForm.number.$invalid }">
+                                    <label for="company-description">Company Phone Number</label>
+                                    <input required ng-model="currentUser.vendor.phone" type="text" name="number" class="form-control" id="company-description" placeholder="Phone Number"/>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="form-group" ng-class="{ 'has-error' : vendorProfileUpdated && profileForm.website.$invalid }">
+                                    <label for="company-description">Company Website</label>
+                                    <input required ng-model="currentUser.vendor.webpage" type="text" name="website" class="form-control" id="company-description" placeholder="Website URL"/>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <label for="item-name">Company Address</label>
+                            </div>
+                        </div>
+                        <div class="well">
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <div class="form-group" ng-class="{ 'has-error' : vendorProfileUpdated && profileForm.address.$invalid }">
+                                        <label for="item-name">Street Address</label>
+                                        <input required ng-model="currentUser.vendor.address.addr_line1" type="text" name="address" class="form-control" id="item-name" placeholder="Street Address"/>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-6">
+                                    <div class="form-group" ng-class="{ 'has-error' : vendorProfileUpdated && profileForm.city.$invalid }">
+                                        <label for="item-name">City</label>
+                                        <input required ng-model="currentUser.vendor.address.city" type="text" name="city" class="form-control" id="item-name" placeholder="City"/>
+                                    </div>
+                                </div>
+                                <div class="col-xs-6">
+                                    <div class="form-group" ng-class="{ 'has-error' : vendorProfileUpdated && profileForm.province.$invalid }">
+                                        <label for="item-name">Province</label>
+                                        <input required ng-model="currentUser.vendor.address.state" type="text" name="province" class="form-control" id="item-name" placeholder="Province or Territory"/>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-6">
+                                    <div class="form-group" ng-class="{ 'has-error' : vendorProfileUpdated && profileForm.country.$invalid }">
+                                        <label for="item-name">Country</label>
+                                        <input required ng-model="currentUser.vendor.address.country" type="text" name="country" class="form-control" id="item-name" placeholder="Country"/>
+                                    </div>
+                                </div>
+                                <div class="col-xs-6">
+                                    <div class="form-group" ng-class="{ 'has-error' : vendorProfileUpdated && profileForm.zip.$invalid }">
+                                        <label for="item-name">Postal Code</label>
+                                        <input required ng-model="currentUser.vendor.address.zipcode" type="text" name="zip" class="form-control" id="item-name" placeholder="Postal Code"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <div class="form-group" ng-class="{ 'has-error' : vendorProfileUpdated && profileForm.descriptionField.$invalid }">
+                                    <label for="company-description">About Your Company<br>
+                                    <small>Maxlength 850 characters</small>
+                                    </label>
+                                    <textarea required ng-model="currentUser.vendor.description" type="text" name="descriptionField" class="form-control" id="company-description" placeholder="About Your Company" maxlength="850"/>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="submit" ng-click="vendorProfileUpdate()" class="btn beLocal-btn-filled">Save Changes</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+
+
+
+<!-- 
+email: "clebeuf@uvic.ca"
+first_name: "Carlene"
+id: 1
+last_name: "Renee"
+name: "CarleneRenee"
+token: "b67f3b4b76635d2bd04086f17cd361ad9f737938"
+userType: "VEN"
+vendor: {id:1, user:1, company_name:Summer Hills Farms, webpage:www.summerhillsfarms.com, country_code:250,…}
+address: {id:1, addr_line1:456 Country Road, city:Victoria, zipcode:V8M3E3, state:BC, country:Canada,…}
+company_name: "Summer Hills Farms"
+country_code: "250"
+description: "This is a very short description about a really awesome vendor."
+extension: "3463"
+id: 1
+phone: "5733046"
+photo: {image_url:http://127.0.0.1:8000/static/media/vendors/CarleneRenee_social_D5xFiMd.jpg}
+user: 1
+webpage: "www.summerhillsfarms.com" 
+-->
+
+
 <!-- Seller Add/Edit Item Modal -->
 <div class="modal fade" id="itemModal">
     <div class="modal-dialog">
@@ -240,6 +383,8 @@
     </div>
     <!-- /.modal-dialog -->
 </div>
+
+
 
 <!-- Seller Add/Edit Location Modal  -->
 <div class="modal fade" id="locationModal">
