--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -8,7 +8,7 @@
                         <li class="active"><a href="/welcome/#home" role="tab" data-toggle="tab">Home</a></li>
                         <li><a href="/welcome/#customers" role="tab" data-toggle="tab">For Customers</a></li>
                         <li><a href="/welcome/#vendors" role="tab" data-toggle="tab">For Farmers</a></li>
-                        <li><a>Sign In</a></li>
+                        <li><a class="pointer" ng-click="signIn()">Sign In</a></li>
                     </ul>
                 </div>
             </div>
@@ -18,7 +18,7 @@
                         <h1 class="cover-heading">Discover Victoria's Local Food Scene</h1>
                         <p class="lead">be<span class="beLocal-highlight">Local</span> connects you with the food grown around you. To begin browsing without creating an account, click Get Started below.</p>
                         <p class="lead">
-                            <a href="#" class="btn btn-lg btn-default">Get Started</a>
+                            <a href="#" class="btn btn-lg btn-default-welcome">Get Started</a>
                         </p>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                             </div>
                             <br><br>
                             <p class="lead">
-                                <a href="#" class="btn btn-lg btn-default">Sign Up as a Customer</a>
+                                <a ng-click="signUpAsCustomer()" class="btn btn-lg btn-default-welcome">Sign Up as a Customer</a>
                             </p>
                         </div>
                     </div>
@@ -75,7 +75,7 @@
                             </div>
                             <br><br>
                             <p class="lead">
-                                <a href="#" class="btn btn-lg btn-default">Sign Up <a href=""></a>s a Farmer</a>
+                                <a ng-click="signUpAsVendor()" class="btn btn-lg btn-default-welcome">Sign Up as a Farmer</a>
                             </p>
                         </div>
                     </div>
@@ -89,3 +89,20 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="accountExistsModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title">Account Already Created</h4>
+      </div>
+      <div class="modal-body">
+        <p>Oops! It looks like this Facebook account already has an beLocal account associated with it. Try signing in instead!</p>
+      </div>
+      <div class="modal-footer no-top-margin">
+        <button type="button" class="btn beLocal-btn-filled" data-dismiss="modal">Close</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
