Added cookie for welcome screen.

--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -18,7 +18,7 @@
                         <h1 class="cover-heading">Discover Victoria's Local Food Scene</h1>
                         <p class="lead">be<span class="beLocal-highlight">Local</span> connects you with the food grown around you. To begin browsing without creating an account, click Get Started below.</p>
                         <p class="lead">
-                            <a href="#" class="btn btn-lg btn-default-welcome">Get Started</a>
+                            <a ng-click="getStarted()" class="btn btn-lg btn-default-welcome">Get Started</a>
                         </p>
                     </div>
                 </div>
