--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -8,7 +8,7 @@
                         <li class="active"><a href="/welcome/#home" role="tab" data-toggle="tab">Home</a></li>
                         <li><a href="/welcome/#customers" role="tab" data-toggle="tab">For Customers</a></li>
                         <li><a href="/welcome/#vendors" role="tab" data-toggle="tab">For Farmers</a></li>
-                        <li><a class="pointer" ng-click="signIn()">Sign In</a></li>
+                        <li><a class="pointer welcome-sign-in" ng-click="signIn()">Sign In</a></li>
                     </ul>
                 </div>
             </div>
@@ -16,7 +16,7 @@
                 <div class="tab-pane active" id="home">
                     <div class="inner cover">
                         <h1 class="cover-heading">Discover Victoria's Local Food Scene</h1>
-                        <p class="lead">be<span class="beLocal-highlight">Local</span> connects you with the food grown around you. To begin browsing without creating an account, click Get Started below.</p>
+                        <p class="lead">be<span class="beLocal-highlight">Local</span> connects you with the food grown around you. <br>To begin browsing without creating an account, click Get Started below.</p>
                         <p class="lead">
                             <a ng-click="getStarted()" class="btn btn-lg btn-default-welcome">Get Started</a>
                         </p>
@@ -33,15 +33,15 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <h2>Search</h2>
-                                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                                    <p>Search for products, markets and local foodmakers in your area.</p>
                                 </div>
                                 <div class="col-md-4">
                                     <h2>Browse</h2>
-                                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                                    <p>Browse individual products at farm stands, markets and stores.</p>
                                 </div>
                                 <div class="col-md-4">
                                     <h2>Discover</h2>
-                                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                                    <p>Discover new foodmakers and sources of local food from the comfort of your home.</p>
                                 </div>
                             </div>
                             <br><br>
@@ -61,16 +61,16 @@
                             <!-- Example row of columns -->
                             <div class="row">
                                 <div class="col-md-4">
-                                    <h2>Add Locations</h2>
-                                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                                    <h2>List Locations</h2>
+                                    <p>List the places where you sell products, including markets, storefronts and farm stands.</p>
                                 </div>
                                 <div class="col-md-4">
-                                    <h2>Add Products</h2>
-                                    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                                    <h2>List Products</h2>
+                                    <p>List the products you sell. beLocal makes it easy for you to add images and to keep stock up to date.</p>
                                 </div>
                                 <div class="col-md-4">
                                     <h2>Connect</h2>
-                                    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                                    <p>Share your latest updates on social media and connect with local customers instantly.</p>
                                 </div>
                             </div>
                             <br><br>
