--- a/src/client/app/styles/welcome.css
+++ b/src/client/app/styles/welcome.css
@@ -2,6 +2,15 @@
  * Globals
  */
 
+body {
+  background:
+    linear-gradient(
+      rgba(0, 0, 0, 0.5), 
+      rgba(0, 0, 0, 0.5)
+    ), 
+    url('../images/sellerbanner-peas.jpg') !important;
+}
+
  .how-it-works {
   text-transform: uppercase;
  }
