Added Facebook icons to sign in
This is per the mentor’s request as they wanted more clarification that
Facebook would be used to sign in. I didn’t put an icon on the sign in
button as I figured people would remember once they created an account
that Facebook was used.

--- a/src/client/app/views/welcome.html
+++ b/src/client/app/views/welcome.html
@@ -46,7 +46,7 @@
                             </div>
                             <br><br>
                             <p class="lead">
-                                <a ng-click="signUpAsCustomer()" class="btn btn-lg btn-default-welcome">Sign Up as a Customer</a>
+                                <a ng-click="signUpAsCustomer()" class="btn btn-lg btn-default-welcome"><i class="fa fa-facebook-square"></i> Sign Up as a Customer</a>
                             </p>
                         </div>
                     </div>
@@ -75,7 +75,7 @@
                             </div>
                             <br><br>
                             <p class="lead">
-                                <a ng-click="signUpAsVendor()" class="btn btn-lg btn-default-welcome">Sign Up as a Farmer</a>
+                                <a ng-click="signUpAsVendor()" class="btn btn-lg btn-default-welcome"><i class="fa fa-facebook-square"></i> Sign Up as a Farmer</a>
                             </p>
                         </div>
                     </div>
